--- a/spring-cloud/src/main/resources/application.properties
+++ b/spring-cloud/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+server.port=8888
+spring.profiles.active=native
+spring.cloud.config.server.native:searchLocations=file:/home/vajgi90/Programming/spring/microservices/spring-cloud-microservices/spring-cloud/src/main/resources
